Crash when deleting an object that is in an instanced group #54136

Closed
opened 2018-02-22 19:56:31 +01:00 by Dalai Felinto · 8 comments

Blender Version
Broken: 03d1f08282

Short description of error
Crash when deleting an object that is instanced.

Exact steps for others to reproduce the error

  • Make a group from default Cube (Ctl + G)
  • Instance this group
  • Delete the original object

Full backtrace: P619

Note if you save the file and try to open it and just delete the original object the problem goes away.

Optionally you can get the same crash if you:

**Blender Version** Broken: 03d1f08282cf **Short description of error** Crash when deleting an object that is instanced. **Exact steps for others to reproduce the error** * Make a group from default Cube (Ctl + G) * Instance this group * Delete the original object Full backtrace: [P619](https://archive.blender.org/developer/P619.txt) *Note if you save the file and try to open it and just delete the original object the problem goes away.* Optionally you can get the same crash if you: * Open [bmw27_cpu.blend ](https://download.blender.org/demo/test/cycles_benchmark_20160228.zip) (need to unzip). * Delete selected object.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2018-02-22 19:57:43 +01:00
Author
Owner

Added subscriber: @Sergey
Removed subscriber: @dfelinto

Added subscriber: @Sergey Removed subscriber: @dfelinto

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Author
Owner

You can reproduce the issue with this test: P620

You can reproduce the issue with this test: [P620](https://archive.blender.org/developer/P620.txt)
Dalai Felinto removed their assignment 2018-02-22 20:46:11 +01:00
Sergey Sharybin was assigned by Dalai Felinto 2018-02-22 20:46:11 +01:00
Author
Owner

Added subscribers: @mont29, @dfelinto

Added subscribers: @mont29, @dfelinto
Author
Owner

This is a fix for this issue: P621

I would like to hear from @mont29 though. Because the problem is that after we unlink the object from the collection, the group still holds a base, but the base points to no-object.
What I wonder if the fix shouldn't go via one of the library system callbacks instead.

This is a fix for this issue: [P621](https://archive.blender.org/developer/P621.txt) I would like to hear from @mont29 though. Because the problem is that after we unlink the object from the collection, the group still holds a base, but the base points to no-object. What I wonder if the fix shouldn't go via one of the library system callbacks instead.

This issue was referenced by d7ba1ada82

This issue was referenced by d7ba1ada8208f6f846b3705f5c6d9933261a625f
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54136
No description provided.